worked with footer,testimonials,course-section,course-details,enrollments and app context

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@
 
   --leading-home-heading-small: 34px;
   --leading-home-heading-large: 56px;
+  /* --section-height: 500px; */
 }
 *{
   font-family: Roboto,sans-serif;
